# ufcoq

./: .dir-locals.el  .envrc  .gitignore  Makefile  README.md  default.nix  dune-project  shell.nix
.emacs/: Makefile  common.el  coq.el  etags-regex  etags-regex.gold  etags-regex.v  helm-fragments.el
.emacs/yasnippet/coq-mode/: .yas-setup.el  code-delimter  comment-section  description  description-eof  documentation-comment  eof
.emacs/yasnippet/emacs-lisp-mode/: .yas-parents
.emacs/yasnippet/shell-comment-syntax-mode/: comment-section  description  description-eof  eof
doc/html/: dune
misc/fragments/: duplicates.awk  fragments.awk  fragments.dsv  fragments.rec  template
misc/nix/: environment.nix
src/: dune
src/base/: construct.v  elident.v  equal.v  equiv.v  examples.v  ident.v  primitive.v  same.v  transport.v
