(lang dune 2.8)

;;; Dune file for the project root

;; This file marks the root of the dune project, and contains the
;; project metadata.  It consists of "stanzas" which is the dune name
;; for S-expressions.
;;
;; The first line of the file must contain only the lang stanza
;;
;;   (lang dune <dune-version>)
;;
;; It specifies that the dune files in the project use the dune
;; language with the stated version.

;;; ==================================================================
;;; General settings
;;; ==================================================================

;; This stanza says that in addition to the general dune language
;; mentioned above, the project dune files will also use the specified
;; version of the Coq language of the dune system.  The Coq language
;; of the dune system provides the coq.theory stanza which can now be
;; used in other dune files in the project for compiling Coq source
;; files.  Version 0.3 is the latest version of the Coq language in
;; dune.
(using coq 0.3)

;; Generate OPAM metadata files for all the packages declared here.
(generate_opam_files true)

;;; ==================================================================
;;; Project metadata
;;; ==================================================================

;; The name of the project.
(name ufcoq)

;; The list of names of the authors of the project.
(authors "Raghavendra Nyshadham")

;; The public location of the project.
(source (github nyraghu/ufcoq))

;; The license of the project as an identifier from the SPDX License
;; List.
(license CC0-1.0)

;; The current version of the project.
(version 0.1.0)

;;; ==================================================================
;;; Package declarations
;;; ==================================================================

;; A package is a collection of files that can be "installed" together
;; in an integrated manner.  After a package has been declared here
;; dune files in subdirectories of the project can attach files to the
;; package in various ways.  The package can also be used as a
;; dependency in dune file rules.
;;
;; Dune generates OPAM package files for the packages declared here
;; because we have set generate_opam_files to true above.  The entries
;; in that file are populated from the declaration of the package
;; here.

;; The following stanza declares the main package.  This package is
;; used as a dependency in the rule for generating HTML documentation
;; with coqdoc because coqdoc needs the glob files generated by the
;; Coq compiler.
;;
;;   - The name field of the stanza specifies an identifier which can
;;     be used to refer to the package in dune commands.
;;
;;   - The depends field declares the OPAM package this package
;;     depends on, and the constraints their versions must satisfy.
;;
;;       - Although coq is only a build dependency of this package, it
;;         does not make much sense to view this project without Coq
;;         because the core of the project, the formalisation, is in
;;         the framework of the Coq proof assistant.  I therefore
;;         declare coq as a run dependency here.
;;
;;       - The ocaml, ocamlfind, and zarith packages are dependencies
;;         of the coq OPAM package, I write them here again to remind
;;         myself that they are indeed necessary for Coq.
;;
;;       - The dune package is somewhat different from the above
;;         dependencies in that I am using it only as build tool like
;;         GNU Make or gradle, and it is neither a fundamental
;;         ingredient of the project as Coq is, nor a dependency of
;;         such an ingredient.  I therefore declare it only as a build
;;         dependency, again with the said version constraint.
;;
;;   - The synopsis and description fields are used by dune to
;;     populate the corresponding fields in the generated OPAM files.

(package
  (name ufcoq)
  (depends
    (coq (>= 8.13.2))
    (dune (and :build (>= 2.8.5)))
    (ocaml (>= 4.10.2))
    (ocamlfind (>= 1.9.1))
    (zarith (>= 1.12)))
  (synopsis "Coq code of the ufcoq project")
  (description "This is the Coq code package of the ufcoq project.
The ufcoq project is my personal effort to formalise small parts
of mathematics over the univalent foundations in the framework of
the Coq proof assistant."))

;; The next stanza declares the documentation package.
;;
;;    - The coq OPAM package is declared a build dependency of this
;;      package because the HTML documentation files in the package
;;      are generated with the coqdoc tool from the coq package.
;;
;;    - The ufcoq package declared above is a build dependency because
;;      the glob files generated by the Coq compiler when compiling
;;      the Coq source files in the ufcoq package are necessary for
;;      coqdoc to generate the HTML files.
;;
;;    - The version constraint on the ufcoq dependency says that this
;;      package depends on the ufcoq package with version equal to the
;;      project version mentioned in the top level version stanza of
;;      this file.

(package
  (name ufcoq-doc)
  (depends
    (coq (and :build (>= 8.13.2)))
    (ufcoq (and :build (= :version))))
  (synopsis "Documentation of the ufcoq project.")
  (description "This is the documentation package of the ufcoq project.
The ufcoq project is my personal effort to formalise small parts
of mathematics over the univalent foundations in the framework of
the Coq proof assistant."))

;;; End of file

;;; Local Variables:
;;; mode: emacs-lisp
;;; lisp-indent-offset: 2
;;; End:
